Fiddled with loading spacing on findr, fixed some edge cases with no search values

--- a/app/css/findr.scss
+++ b/app/css/findr.scss
@@ -70,8 +70,7 @@
 		width: 55px;
 		top: 50%;
 		left: 50%;
-		width: 55px;
-		transform: translate(-50%, 12px);
+		transform: translate( -50%, 20px );
 	}
 }
 
